<resources>
    <string name="app_name">LaCabanaM</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="msg_correo">Correo</string>
    <string name="msg_clave">Contraseña</string>
    <string name="msg_inicio">Iniciar Sesion</string>
    <string name="msg_registrarse">Registrarse</string>
    <string name="msg_noCuenta">No tienes cuenta?</string>


    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_principal">Principal</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Reservas</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- Strings de la parte de mostrar reservas || Los textboxes-->

    <string name="txt_dias">Fechas</string>
    <string name="txt_actividades">Actividades</string>
    <string name="txt_cantidad">Cantidad de personas</string>
    <string name="txt_telefono">Telefono registrado</string>

    <!-- Strings de la parte de actualizar reservas || Los textboxes-->
    <string name="msg_data">procesando</string>
    <string name="msg_reserva_actualizada">Reserva actualizada</string>
    <string name="msg_reserva_eliminada">Reserva eliminada</string>
    <string name="nav_header_desc">Reservas</string>
    <string name="nav_header_title">La Cabana</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="title_activity_principal2">Principal2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>