<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vistaFila"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="25dp"
    app:cardElevation="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_tipoHab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="titulo"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_act3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/txt_dias"
            app:layout_constraintEnd_toEndOf="@+id/txt_act"
            app:layout_constraintStart_toStartOf="@+id/txt_act"
            app:layout_constraintTop_toBottomOf="@+id/txt_tipoHab" />

        <TextView
            android:id="@+id/txt_act"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/txt_actividades"
            app:layout_constraintTop_toBottomOf="@+id/txt_act3"
            tools:layout_editor_absoluteX="75dp" />

        <TextView
            android:id="@+id/txt_act4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/txt_cantidad"
            app:layout_constraintStart_toStartOf="@+id/txt_act"
            app:layout_constraintTop_toBottomOf="@+id/txt_act" />

        <TextView
            android:id="@+id/txt_cel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="16dp"
            android:text="@string/txt_telefono"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_act4"
            app:layout_constraintTop_toBottomOf="@+id/txt_act4"
            app:layout_constraintVertical_bias="0.181" />

        <TextView
            android:id="@+id/txt_FechaSalida2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="60dp"
            android:text="TextView"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_tipoHab" />

        <TextView
            android:id="@+id/txt_FechaInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:text="TextView"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/txt_FechaSalida2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/txt_listaAct"
            app:layout_constraintTop_toBottomOf="@+id/txt_tipoHab" />

        <TextView
            android:id="@+id/txt_listaAct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="TextView"
            app:layout_constraintBottom_toTopOf="@+id/txt_act4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txt_cantidad1"
            app:layout_constraintTop_toBottomOf="@+id/txt_FechaSalida2"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/txt_cantidad1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="100dp"
            android:text="TextView"
            app:layout_constraintBottom_toTopOf="@+id/txt_cel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_celCompleto"
            app:layout_constraintTop_toBottomOf="@+id/txt_listaAct"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txt_celCompleto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="96dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_cantidad1"
            app:layout_constraintVertical_bias="0.125" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>